<package format="2">
  <name>mynt_ros</name>
  <version>1.1.1</version>
  <description>
  This package provides a ROS interface the MYNT standard camera
  </description>
  <maintainer email="superjax08@gmail.com">James James</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  
</package>
